--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main_screen.MainFragment">
+    tools:context=".main_screen.MainScreenFragment">
 
     <EditText
         android:id="@+id/search_edit_text"
@@ -31,28 +31,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_edit_text" />
 
-    <ImageView
-        android:id="@+id/image_test"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/album_res_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="fitCenter"
+        android:layout_height="0dp"
+        android:padding="6dp"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:itemCount="16"
+        tools:listitem="@layout/album_item"/>
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--    <ImageView-->
+<!--        android:id="@+id/image_test"-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:padding="6dp"-->
-<!--        android:clipToPadding="false"-->
-<!--        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
-<!--        app:spanCount="2"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:scaleType="fitCenter"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"-->
-<!--        tools:itemCount="16"-->
-<!--        tools:listitem="@layout/album_item"/>-->
+<!--        tools:src="@tools:sample/backgrounds/scenic" />-->
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
