--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,14 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".details_screen.DetailsFragment">
 
-    <TextView
-        android:id="@+id/test_text"
+    <ImageView
+        android:id="@+id/album_image_big"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="" />
+        android:layout_height="250dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/backgrounds/scenic" />
 
-</FrameLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+
+
+        </LinearLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/artist_detail_textView"
+        style="@style/text_style"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/album_image_big"
+        tools:text="Artist: Metallica" />
+
+    <TextView
+        android:id="@+id/album_detail_textView"
+        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+        app:layout_constraintTop_toBottomOf="@+id/artist_detail_textView"
+        tools:text="Album: Muster of Puppets"
+        style="@style/text_style" />
+
+    <TextView
+        android:id="@+id/genre_textView"
+        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+        app:layout_constraintTop_toBottomOf="@+id/album_detail_textView"
+        tools:text="Genre: Metal"
+        style="@style/text_style" />
+
+    <TextView
+        android:id="@+id/release_date_textView"
+        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+        app:layout_constraintTop_toBottomOf="@+id/genre_textView"
+        tools:text="Release Date: Metal"
+        style="@style/text_style" />
+
+    <TextView
+        android:id="@+id/price_textView"
+        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+        app:layout_constraintTop_toBottomOf="@+id/release_date_textView"
+        tools:text="Price: 29$"
+        style="@style/text_style" />
+
+    <TextView
+        android:id="@+id/list_of_songs"
+        style="@style/text_style"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+        app:layout_constraintTop_toBottomOf="@+id/price_textView"
+        tools:text="Songs: \n1. Battery
+        \n2. Master of Pappets
+        \n3. Welcome Home (Sanitarium)" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
