--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".details_screen.DetailsFragment">
@@ -19,52 +19,71 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/backgrounds/scenic" />
 
-    <TextView
-        android:id="@+id/artist_detail_textView"
-        style="@style/text_style"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/album_image_big"
-        tools:text="Artist: Metallica" />
+        app:layout_constraintTop_toBottomOf="@+id/album_image_big">
 
-    <TextView
-        android:id="@+id/album_detail_textView"
-        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/artist_detail_textView"
-        tools:text="Album: Muster of Puppets"
-        style="@style/text_style" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/genre_textView"
-        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/album_detail_textView"
-        tools:text="Genre: Metal"
-        style="@style/text_style" />
+            <TextView
+                android:id="@+id/artist_detail_textView"
+                style="@style/text_style"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/album_image_big"
+                tools:text="Artist: Metallica" />
 
-    <TextView
-        android:id="@+id/release_date_textView"
-        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/genre_textView"
-        tools:text="Release Date: Metal"
-        style="@style/text_style" />
+            <TextView
+                android:id="@+id/album_detail_textView"
+                style="@style/text_style"
+                app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/artist_detail_textView"
+                tools:text="Album: Muster of Puppets" />
 
-    <TextView
-        android:id="@+id/price_textView"
-        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/release_date_textView"
-        tools:text="Price: 29$"
-        style="@style/text_style" />
+            <TextView
+                android:id="@+id/genre_textView"
+                style="@style/text_style"
+                app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/album_detail_textView"
+                tools:text="Genre: Metal" />
 
-    <TextView
-        android:id="@+id/list_of_songs"
-        style="@style/text_style"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
-        app:layout_constraintTop_toBottomOf="@+id/price_textView"
-        tools:text="Songs: \n1. Battery
-        \n2. Master of Pappets
-        \n3. Welcome Home (Sanitarium)" />
+            <TextView
+                android:id="@+id/release_date_textView"
+                style="@style/text_style"
+                app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/genre_textView"
+                tools:text="Release Date: Metal" />
+
+            <TextView
+                android:id="@+id/price_textView"
+                style="@style/text_style"
+                app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/release_date_textView"
+                tools:text="Price: 29$" />
+
+            <TextView
+                android:id="@+id/list_of_songs"
+                style="@style/text_style"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
+                app:layout_constraintTop_toBottomOf="@+id/price_textView"
+                tools:text="Songs: \n1. Battery
+                                   \n2. Master of Pappets
+                                   \n3. Welcome Home (Sanitarium)" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
