--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -63,7 +63,7 @@
                 style="@style/text_style"
                 app:layout_constraintStart_toStartOf="@+id/artist_detail_textView"
                 app:layout_constraintTop_toBottomOf="@+id/genre_textView"
-                tools:text="Release Date: Metal" />
+                tools:text="Release Date: 20.12.1981" />
 
             <TextView
                 android:id="@+id/price_textView"
