--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -46,6 +46,19 @@
         tools:itemCount="16"
         tools:listitem="@layout/album_item"/>
 
+    <TextView
+        android:id="@+id/no_found_textVeiw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_found_text"
+        android:textSize="@dimen/normal_text_size"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
+
 <!--    <ImageView-->
 <!--        android:id="@+id/image_test"-->
 <!--        android:layout_width="match_parent"-->
