--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.zedevstuds.itunesfinder.main_screen.MainScreenFragment"
-        android:label="fragment_main"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_main_screen" >
         <action
             android:id="@+id/action_mainFragment_to_detailsFragment"
@@ -17,6 +17,6 @@
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.zedevstuds.itunesfinder.details_screen.DetailsFragment"
-        android:label="fragment_details"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_details" />
 </navigation>
