--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -14,7 +14,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:hint="enter album's name"
+        android:hint="@string/search_field_hint"
+        android:inputType="text"
         android:singleLine="true"
         app:layout_constraintEnd_toStartOf="@+id/search_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,17 +59,5 @@
         app:layout_constraintTop_toBottomOf="@id/search_edit_text"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible"/>
-
-<!--    <ImageView-->
-<!--        android:id="@+id/image_test"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:scaleType="fitCenter"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"-->
-<!--        tools:src="@tools:sample/backgrounds/scenic" />-->
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
