--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -20,10 +20,7 @@
 
     <TextView
         android:id="@+id/artist_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/normal_text_size"
+        style="@style/text_style"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -33,10 +30,7 @@
 
     <TextView
         android:id="@+id/album_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="@dimen/normal_text_size"
+        style="@style/text_style"
         app:layout_constraintStart_toStartOf="@+id/artist_textView"
         app:layout_constraintTop_toBottomOf="@+id/artist_textView"
         tools:text="Album: Muster of Puppets" />
