--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -51,7 +51,7 @@
         android:id="@+id/no_found_textVeiw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_found_text"
+        android:text="@string/empty_list_text"
         android:textSize="@dimen/normal_text_size"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,14 +60,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible"/>
 
-    <ImageView
-        android:id="@+id/loading_imageView"
+
+    <ProgressBar
+        android:id="@+id/loading_progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_edit_text"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
