Added behaviour for Enter Button of Soft Keyboard

--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -17,6 +17,7 @@
         android:hint="@string/search_field_hint"
         android:inputType="text"
         android:singleLine="true"
+        android:imeOptions="actionSearch"
         app:layout_constraintEnd_toStartOf="@+id/search_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
